2024-01-28T08:18:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7684465759 # 64
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-28
* notice: last 14d: unq all: 3 25
* notice: prev accum: outdated-unq outdated-all / unq all: 849 1550 / 862 1574
* notice: next accum: outdated-unq outdated-all / unq all: 849 1550 / 863 1575
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-28]

2024-01-27T16:16:56Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7679770218 # 62
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-27
* notice: last 14d: unq all: 3 24
* notice: prev accum: outdated-unq outdated-all / unq all: 849 1550 / 862 1573
* notice: next accum: outdated-unq outdated-all / unq all: 849 1550 / 862 1574
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2024-01-27]

2024-01-27T08:17:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7677409122 # 61
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-27
* notice: last 14d: unq all: 3 23
* notice: prev accum: outdated-unq outdated-all / unq all: 849 1550 / 860 1571
* notice: next accum: outdated-unq outdated-all / unq all: 849 1550 / 862 1573
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2024-01-27]

2024-01-26T16:18:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7670603012 # 59