@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-01-28T08:18:14Z",
+  "timestamp" : "2024-01-28T16:16:09Z",
   "count_outdated" : 1550,
   "uniques_outdated" : 849,
-  "count" : 1575,
+  "count" : 1576,
   "uniques" : 863,
   "clones" : [
     {
@@ -106,9 +106,9 @@
     },
     {
       "timestamp": "2024-01-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
