@@ -1,5 +1,5 @@
 {
-  "count": 25,
+  "count": 26,
   "uniques": 3,
   "clones": [
     {
@@ -59,7 +59,7 @@
     },
     {
       "timestamp": "2024-01-28T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
